--- a/src/assets/iconfont/iconfont.css
+++ b/src/assets/iconfont/iconfont.css
@@ -15,25 +15,25 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-D:before { content: "\e600"; }
+.icon-1:before { content: "\e600"; }
 
-.icon-f14:before { content: "\e614"; }
+.icon-2:before { content: "\e614"; }
 
-.icon-a:before { content: "\e63f"; }
+.icon-3:before { content: "\e63f"; }
 
-.icon-b:before { content: "\e8be"; }
+.icon-4:before { content: "\e8be"; }
 
-.icon-c:before { content: "\e60c"; }
+.icon-5:before { content: "\e60c"; }
 
-.icon-wenhao:before { content: "\e60d"; }
+.icon-6:before { content: "\e60d"; }
 
-.icon-icon101:before { content: "\e644"; }
+.icon-7:before { content: "\e644"; }
 
-.icon-fanhui:before { content: "\e650"; }
+.icon-8:before { content: "\e650"; }
 
-.icon-tongji7:before { content: "\e67d"; }
+.icon-9:before { content: "\e67d"; }
 
-.icon-zhongchaoyuanjiaofangkuai-:before { content: "\e72d"; }
+.icon-10:before { content: "\e72d"; }
 
-.icon-huaban:before { content: "\e72e"; }
+.icon-11:before { content: "\e72e"; }
 
